--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Hark upon the gale & Follow your heart"
+description: "Hark upon the gale & Listen to your heart"
 ---
 
 {% for post in paginator.posts %}
