--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hey, this is Haoyue."
-header-img: "img/post-bg-rwd.jpg"
+header-img: "img/about-bg.jpg"
 ---
 
 <!-- Language Selector -->
@@ -22,8 +22,7 @@ header-img: "img/post-bg-rwd.jpg"
 
     <p>工作、学习之余，我喜欢读读书，拉拉琴。偶尔也会写点代码，欢迎来我的博客交流。</p>
 
-    #<p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
-
+    
     <p></p>
     
     <h5>Talks</h5>
