--- a/about.html
+++ b/about.html
@@ -25,13 +25,15 @@ header-img: "img/about-bg.jpg"
     
     <p></p>
     
-    <h5>Talks</h5>
+    <h5>Interests</h5>
 
     <ul>
+        <li><a href="https://www.aps.org/">APS Physics</a><li>
         <li><a href="https://github.com">GitHub</a></li>
         <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-        <li><a href="http://huangxuan.me/">Hux</a></li> 
+        <li><a href="https://www.anaconda.com//">Anaconda</a></li> 
         <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
+        <li><a href="https://www.douban.com/">Douban</a></li>
     </ul>
 </div>
 
