--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@ header-img: "img/about-bg.jpeg"
     <h5>Interests</h5>
 
     <ul>
-        <li><a href="https://www.aps.org/">APS Physics</a><li>
+        <li><a href="https://www.aps.org/">APS Physics</a></li>
         <li><a href="https://github.com">GitHub</a></li>
         <li><a href="http://jekyll.com.cn/">jekyll</a></li>
         <li><a href="https://www.anaconda.com//">Anaconda</a></li> 
