--- a/about.html
+++ b/about.html
@@ -29,10 +29,10 @@ header-img: "img/about-bg.jpeg"
 
     <ul>
         <li><a href="https://www.aps.org/">APS Physics</a></li>
-        <li><a href="http://jekyll.com.cn/">jekyll</a></li>
         <li><a href="https://www.anaconda.com//">Anaconda</a></li> 
         <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
         <li><a href="https://www.douban.com/">Douban</a></li>
+        <li><a href="http://www.artcyclopedia.com/index.html">Art Cyclopedia</a></li>
     </ul>
 </div>
 
@@ -41,9 +41,7 @@ header-img: "img/about-bg.jpeg"
     <blockquote><p>Yet another iOS Developer. <br>
     Yet another Life-long Student.</p></blockquote>
 
-    <p>Hi, I am <strong>Baiying Qiu</strong>，you can call me <strong>BY</strong>. I am an iOS software engineer and currently working in Xiamen</p>
-
-    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
+    <p>Hi, I am <strong>Haoyue</strong>，you can call me <strong>Alex</strong>. I am a graduate student in W&M.  👉 <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
     
     <p>I am a sports enthusiast, I like fitness, running and boxing.</p>
 
