--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: <font color=black>"About"
-description: <font color=black>"Hey, this is Haoyue."
+title: <font color=black>About
+description: <font color=black>"me"
 header-img: "img/about-bg.jpeg"
 ---
 
