--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: <font color=black>About
-description: <font color=black>"me"
+title: <font color=#D1EEEE>About
+description: <font color=#D1EEEE>Hey, this is Haoyue
 header-img: "img/about-bg.jpeg"
 ---
 
