--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: About
-description: <font color=#000066>Hey, this is Haoyue
-header-img: "img/about-bg.jpeg"
+description: Hey, this is Haoyue
+header-img: "img/about_bg.jpg"
 ---
 
 <!-- Language Selector -->
