--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: About
 description: Hey, this is Haoyue
-header-img: "img/about_bg.jpg"
+header-img: "img/about_bg.jpeg"
 ---
 
 <!-- Language Selector -->
