--- a/about.html
+++ b/about.html
@@ -21,6 +21,8 @@ header-img: "img/about_bg.jpeg"
     <p>Hey，我是<strong>皓月(Haoyue)</strong>，一只物理科研狗，现居美国弗吉尼亚州。</p>
 
     <p>工作、学习之余，我喜欢读读书，拉拉琴。偶尔也会写点代码，欢迎来我的博客交流。</p>
+    
+    <p>如果你是可爱的小姐姐，我会更开心的。(●ˇ∀ˇ●)</p>
 
     
     <p></p>
